@@ -7,4 +7,5 @@
 * get rid of "transmitting" and "ack" messages; instead send status is displayed next to the message
 * requires at Rust >=1.31.0 (edition 2018)
 * updated versions of dependencies
-* disable notify feature at compile time
+* disable notify feature at compile time via --features "no_notify"
+* group chat (currently for symmetric encryption only)
